--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -261,12 +261,24 @@
                     <StackPanel Orientation="Horizontal">
                         <Border CornerRadius="25" 
                                     Background="CornflowerBlue" 
+                                BorderThickness="2.5"
                                     Width="30" 
-                                    Height="30"/>
+                                    Height="30">
+                            <Border.Style>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="BorderBrush" Value="DarkRed"/>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding UserModel.UserProfile.IsOnline}" Value="True">
+                                            <Setter Property="BorderBrush" Value="Green"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Border.Style>
+                        </Border>
                         <StackPanel Width="400">
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding Path=UserInfo.Username}"
-                                       Foreground="{Binding Path=UserInfo.UsernameColor}"
+                                <TextBlock Text="{Binding Path=UserModel.UserProfile.Username}"
+                                       Foreground="{Binding Path=UserModel.UserProfile.UsernameColor}"
                                        Margin="10,0,5,0"
                                        FontSize="18"/>
                                 <TextBlock Text="{Binding Path=Time}"
