--- a/ChatClient/App.xaml
+++ b/ChatClient/App.xaml
@@ -21,6 +21,7 @@
                 <ResourceDictionary Source="Resources/Images/Mute.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/Filter.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/ThreeDots.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/Settings.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
