--- a/ChatClient/Views/AdditionalViews/PrivateChatView.xaml
+++ b/ChatClient/Views/AdditionalViews/PrivateChatView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ChatClient.Views.AdditionalViews"
+             xmlns:controls="clr-namespace:ChatClient.Controls"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -23,12 +24,29 @@
                     BorderBrush="#AAAEB2"
                     BorderThickness="0,1,0,1"
                     Background="{StaticResource mainMessageBoxColors}">
-                <TextBox 
+                <AdornerDecorator>
+                    <TextBox VerticalAlignment="Center"
+                     FontSize="22"
+                             Height="35"
+                             Padding="0,2,0,0"
+                             Background="#ECECF4"
+                     Text="{Binding UsersFilter,UpdateSourceTrigger=PropertyChanged}">
+                        <controls:WatermarkService.Watermark>
+                            <TextBlock VerticalAlignment="Center"
+                                       Margin="5"
+                                       FontSize="22">
+                                Search
+                            </TextBlock>
+                        </controls:WatermarkService.Watermark>
+                    </TextBox>
+                </AdornerDecorator>
+                <!--<TextBox 
                      VerticalAlignment="Center"
-                     FontSize="18"
+                     FontSize="20"
                      Height="35"
-                         Background="#ECECF4"
-                    Text="{Binding UsersFilter,UpdateSourceTrigger=PropertyChanged}"/>
+                     Background="#ECECF4"
+                    Padding="0,2,0,0"
+                    Text="{Binding UsersFilter,UpdateSourceTrigger=PropertyChanged}"/>-->
             </Border>
 
             <Border  Grid.Row="1" 
@@ -54,8 +72,7 @@
                         </Border>
                         <Border Grid.Row="1" BorderBrush="#AAAEB2"
                             BorderThickness="0,0,1,0">
-                        <StackPanel Orientation="Horizontal"
-                                    Background="{StaticResource typeMessageGridColors}">
+                        <DockPanel Background="{StaticResource typeMessageGridColors}">
                             <Border CornerRadius="25" 
                                     Background="CornflowerBlue" 
                                     Width="30" 
@@ -74,15 +91,25 @@
                                     </Style>
                                 </Border.Style>
                             </Border>
-                            <StackPanel VerticalAlignment="Center">
+                            <StackPanel VerticalAlignment="Center"
+                                        Orientation="Horizontal">
                                 <TextBlock Text="{Binding CurrentUser.UserProfile.Username}"
-                                       Foreground="{Binding CurrentUser.UserProfile.UsernameColor}"
+                                       Foreground="Black"
                                        Margin="10,-5,10,0"
                                        FontSize="22"
                                        Name="userTextBlock"
-                                       VerticalAlignment="Center"/>
+                                       VerticalAlignment="Center"
+                                           DockPanel.Dock="Left"/>
                             </StackPanel>
-                        </StackPanel>
+                            <Image Source="{StaticResource settingsDrawingImage}"
+                                       VerticalAlignment="Center"
+                                       DockPanel.Dock="Right"
+                                    HorizontalAlignment="Right"
+                                       Width="28"
+                                       Height="28"
+                                   Margin="5"
+                                   Panel.ZIndex="2"/>
+                        </DockPanel>
                     </Border>
                 </Grid>
             </Border>
