--- a/ChatClient/Resources/Border.xaml
+++ b/ChatClient/Resources/Border.xaml
@@ -60,4 +60,17 @@
             </DataTrigger>
         </Style.Triggers>
     </Style>
+
+    <Style x:Key="userIcon" TargetType="{x:Type Border}">
+        <Setter Property="CornerRadius" Value="25"/>
+        <Setter Property="Width" Value="30"/>
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="BorderThickness" Value="2.5"/>
+        <Setter Property="BorderBrush" Value="DarkRed"/>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding CurrentUser.UserProfile.IsOnline}" Value="True">
+                <Setter Property="BorderBrush" Value="Green"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
