--- a/ChatClient/Resources/Grid.xaml
+++ b/ChatClient/Resources/Grid.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews">
+                    xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews"
+                    xmlns:i="http://schemas.microsoft.com/xaml/behaviors">
 
     <LinearGradientBrush x:Key="typeMessageGridColors" StartPoint="0.5,0" EndPoint="0.5,1">
         <GradientStop Color="#D9D9DC" Offset="0"/>
@@ -63,6 +64,17 @@
             </DataTrigger>
             <DataTrigger Binding="{Binding ConnectionStatusValue}" Value="Disconnected">
                 <Setter Property="Visibility" Value="Visible"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="privateMessagesGrid" TargetType="{x:Type Grid}">
+        <Setter Property="Visibility" Value="Collapsed"/>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding ElementName=userList, Path=SelectedIndex}"
+                                     Value="-1">
+                <Setter Property="Visibility" 
+                                    Value="Visible"/>
             </DataTrigger>
         </Style.Triggers>
     </Style>
