--- a/ChatClient/Resources/TextBlock.xaml
+++ b/ChatClient/Resources/TextBlock.xaml
@@ -45,4 +45,18 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
 
+    <Style x:Key="settingsField" TargetType="{x:Type TextBlock}">
+        <Setter Property="Foreground" Value="#4E4E51"/>
+        <Setter Property="FontSize" Value="22"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
+        <Setter Property="Margin" Value="5,5,0,-10"/>
+    </Style>
+
+    <Style x:Key="settingsInsideField" TargetType="{x:Type TextBlock}">
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="FontSize" Value="22"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="5"/>
+    </Style>
+
 </ResourceDictionary>
