--- a/ChatClient/App.xaml
+++ b/ChatClient/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="ChatClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ChatClient"
-             >
+             xmlns:local="clr-namespace:ChatClient">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
